--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-body {
+*{
   margin: 0;
+  padding: 0;
+}
+
+body {
+  /* width: 80%;
+  margin: auto; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
